@@ -15,25 +15,35 @@
  */
 package ch.post.it.evoting.verifier.backend.tools;
 
-import java.util.List;
+import static com.google.common.base.Preconditions.checkNotNull;
 
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.verifier.backend.tools.path.StructureKey;
 
 public enum DatasetType {
-	CONTEXT(List.of(StructureKey.CONFIGURATION_ANONYMIZED, StructureKey.ELECTION_EVENT_CONTEXT, StructureKey.SETUP_COMPONENT_PUBLIC_KEYS,
-			StructureKey.CONTROL_COMPONENT_PUBLIC_KEYS, StructureKey.SETUP_COMPONENT_TALLY_DATA)),
-	SETUP(List.of(StructureKey.CONTROL_COMPONENT_CODE_SHARES, StructureKey.SETUP_COMPONENT_VERIFICATION_DATA)),
-	TALLY(List.of(StructureKey.TALLY_COMPONENT_DECRYPT, StructureKey.TALLY_COMPONENT_ECH0110, StructureKey.TALLY_COMPONENT_ECH0222,
-			StructureKey.CONTROL_COMPONENT_BALLOT_BOX, StructureKey.CONTROL_COMPONENT_SHUFFLE, StructureKey.TALLY_COMPONENT_SHUFFLE,
+	CONTEXT(ImmutableList.of(
+			StructureKey.CONFIGURATION_ANONYMIZED,
+			StructureKey.ELECTION_EVENT_CONTEXT,
+			StructureKey.SETUP_COMPONENT_PUBLIC_KEYS,
+			StructureKey.CONTROL_COMPONENT_PUBLIC_KEYS,
+			StructureKey.SETUP_COMPONENT_TALLY_DATA)),
+	SETUP(ImmutableList.of(
+			StructureKey.CONTROL_COMPONENT_CODE_SHARES,
+			StructureKey.SETUP_COMPONENT_VERIFICATION_DATA)),
+	TALLY(ImmutableList.of(
+			StructureKey.TALLY_COMPONENT_ECH0222,
+			StructureKey.CONTROL_COMPONENT_BALLOT_BOX,
+			StructureKey.CONTROL_COMPONENT_SHUFFLE,
+			StructureKey.TALLY_COMPONENT_SHUFFLE,
 			StructureKey.TALLY_COMPONENT_VOTES));
 
-	private final List<StructureKey> structureKeys;
+	private final ImmutableList<StructureKey> structureKeys;
 
-	DatasetType(final List<StructureKey> structureKeys) {
-		this.structureKeys = structureKeys;
+	DatasetType(final ImmutableList<StructureKey> structureKeys) {
+		this.structureKeys = checkNotNull(structureKeys);
 	}
 
-	public List<StructureKey> getStructureKeys() {
-		return List.copyOf(structureKeys);
+	public ImmutableList<StructureKey> getStructureKeys() {
+		return structureKeys;
 	}
 }
